src/objects/Content__c.object
<CustomObject>
    <description>Each content is a collection of data that ultimately will be shown in a Component. That data (Its kind and quantity) depends on the Content record type</description>
    <fields>
        <fullName>AssetType__c</fullName>
        <label>Asset Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Logo</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Videos</fullName>
                </value>
                <value>
                    <fullName>Occasion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>BannerFrameType__c</fullName>
        <label>Banner Frame Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BannerFrameType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Contents</relationshipLabel>
        <relationshipName>Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ButtonLabel__c</fullName>
        <label>Button Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Contents</relationshipLabel>
        <relationshipName>Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClusterRootExternalId__c</fullName>
        <formula>if(Cluster__r.RecordType.DeveloperName = &apos;ClusterRoot&apos;, Cluster__r.ExternalId__c, &apos;&apos;)
+
if(Cluster__r.ParentCluster__r.RecordType.DeveloperName = &apos;ClusterRoot&apos;, Cluster__r.ParentCluster__r.ExternalId__c, &apos;&apos;)
+
if(Cluster__r.ParentCluster__r.ParentCluster__r.RecordType.DeveloperName = &apos;ClusterRoot&apos;, Cluster__r.ParentCluster__r.ParentCluster__r.ExternalId__c, &apos;&apos;)
+
if(Cluster__r.ParentCluster__r.ParentCluster__r.ParentCluster__r.RecordType.DeveloperName = &apos;ClusterRoot&apos;, Cluster__r.ParentCluster__r.ParentCluster__r.ParentCluster__r.ExternalId__c, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster Root External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cluster</label>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipLabel>Contents</relationshipLabel>
        <relationshipName>Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContentRedirect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NO RESPONDE A NUESTRO MODELO DE DATOS</description>
        <label>Content Redirect</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Content__c.RecordType.Name</field>
                <operation>equals</operation>
                <valueField>$Source.RedirectType__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Content__c</referenceTo>
        <relationshipLabel>Related Banners</relationshipLabel>
        <relationshipName>Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventDates__c</fullName>
        <formula>CASE(MONTH(DATEVALUE(EventStartDate__c)), 1,&apos;Jan&apos;, 2,&apos;Feb&apos;, 3,&apos;Mar&apos;, 4,&apos;Apr&apos;, 5,&apos;May&apos;, 6,&apos;Jun&apos;, 7,&apos;Jul&apos;, 8,&apos;Aug&apos;, 9,&apos;Sep&apos;, 10,&apos;Oct&apos;, 11,&apos;Nov&apos;, &apos;Dec&apos;)
 +&apos; &apos;+
 TEXT(DAY(DATEVALUE(EventStartDate__c)))
 +&apos;, &apos;+
 TEXT(YEAR(DATEVALUE(EventStartDate__c)))
 + 
 IF(EventStartDate__c != EventEndDate__c
 , &apos; - &apos; + 
 CASE(MONTH(DATEVALUE(EventEndDate__c)), 1,&apos;Jan&apos;, 2,&apos;Feb&apos;, 3,&apos;Mar&apos;, 4,&apos;Apr&apos;, 5,&apos;May&apos;, 6,&apos;Jun&apos;, 7,&apos;Jul&apos;, 8,&apos;Aug&apos;, 9,&apos;Sep&apos;, 10,&apos;Oct&apos;, 11,&apos;Nov&apos;, &apos;Dec&apos;)
 +&apos; &apos;+
 TEXT(DAY(DATEVALUE(EventEndDate__c)))
 +&apos;, &apos;+
 TEXT(YEAR(DATEVALUE(EventEndDate__c)))
 ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Dates</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventEndDate__c</fullName>
        <label>Event End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EventStartDate__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Event Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EventStartDay__c</fullName>
        <formula>IF(DAY(DATEVALUE(EventStartDate__c)) &lt; 10, &apos;0&apos; &amp;  TEXT(DAY(DATEVALUE(EventStartDate__c))) , TEXT(DAY(DATEVALUE(EventStartDate__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Start Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventStartMonth__c</fullName>
        <formula>CASE(
  MONTH(DATEVALUE( EventStartDate__c )),
  1, &quot;Jan&quot;,
  2, &quot;Feb&quot;,
  3, &quot;Mar&quot;,
  4, &quot;Apr&quot;,
  5, &quot;May&quot;,
  6, &quot;Jun&quot;,
  7, &quot;Jul&quot;,
  8, &quot;Aug&quot;,
  9, &quot;Sep&quot;,
  10, &quot;Oct&quot;,
  11, &quot;Nov&quot;,
  &quot;Dec&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Start Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Extract__c</fullName>
        <label>Extract</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HTMLContent__c</fullName>
        <inlineHelpText>If html content wants to be uploaded use this field instead of the Long Description one.</inlineHelpText>
        <label>HTML Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <formula>AND
(
 ISPICKVAL(Status__c,&apos;Active&apos;)
,OR
 (
  ISBLANK(PublishStartDate__c)
 ,PublishStartDate__c &lt; NOW()
 )
,OR
 (
  ISBLANK(PublishEndDate__c)
 ,PublishEndDate__c &gt; NOW()
 )
)</formula>
        <inlineHelpText>It is based on the Status and the Publish Dates</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTemplate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies when a record represents a template</description>
        <label>Is Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Layout__c</fullName>
        <label>Layout</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Title Top</fullName>
                    <default>true</default>
                    <label>Title Top</label>
                </value>
                <value>
                    <fullName>Title Middle</fullName>
                </value>
                <value>
                    <fullName>Title Bottom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinkDetail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Link Detail</label>
        <referenceTo>Navigation__c</referenceTo>
        <relationshipLabel>Contents</relationshipLabel>
        <relationshipName>Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OverlayQuadrant__c</fullName>
        <label>Overlay Quadrant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Top-Left</fullName>
                </value>
                <value>
                    <fullName>Top-Center</fullName>
                </value>
                <value>
                    <fullName>Top-Right</fullName>
                </value>
                <value>
                    <fullName>Middle-Left</fullName>
                </value>
                <value>
                    <fullName>Middle-Center</fullName>
                </value>
                <value>
                    <fullName>Middle-Right</fullName>
                </value>
                <value>
                    <fullName>Bottom-Left</fullName>
                </value>
                <value>
                    <fullName>Bottom-Center</fullName>
                </value>
                <value>
                    <fullName>Bottom-Right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PublishEndDate__c</fullName>
        <label>Publish End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PublishStartDate__c</fullName>
        <label>Publish Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PublishedDate__c</fullName>
        <description>NO RESPONDE A NUESTRO MODELO DE DATOS</description>
        <label>Actual Published Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RedirectType__c</fullName>
        <label>Redirect Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>News</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StatusApprovalProcess__c</fullName>
        <label>Status approval process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>StatusApprovalProcess</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Manage the status of the record.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StructureComponent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Structure Component</label>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>Contents</relationshipLabel>
        <relationshipName>Contents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StructureNavigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Structure Navigation</label>
        <referenceTo>Navigation__c</referenceTo>
        <relationshipLabel>Contents (Structure Navigation)</relationshipLabel>
        <relationshipName>Contents1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TemplateDescription__c</fullName>
        <description>Description of the template</description>
        <label>Template Description</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TemplateUsed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates a content to the template that was used as model when the record was created</description>
        <label>Template Used</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Content__c.IsTemplate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Content__c</referenceTo>
        <relationshipLabel>Contents</relationshipLabel>
        <relationshipName>RelatedContents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URLRedirect__c</fullName>
        <defaultValue>&apos;http://&apos;</defaultValue>
        <label>URL Redirect</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Content</label>
    <listViews>
        <fullName>Advance_Content</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Content__c.AdvanceContent</value>
        </filters>
        <label>Advance Content</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cluster__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Assets</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Content__c.Asset</value>
        </filters>
        <label>Assets</label>
    </listViews>
    <listViews>
        <fullName>Banners</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Content__c.Banner</value>
        </filters>
        <label>Banners</label>
    </listViews>
    <listViews>
        <fullName>Events</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Content__c.Event</value>
        </filters>
        <label>Events</label>
    </listViews>
    <listViews>
        <fullName>FAQs</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Content__c.FAQ</value>
        </filters>
        <label>FAQs</label>
    </listViews>
    <listViews>
        <fullName>News</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Content__c.News</value>
        </filters>
        <label>News</label>
    </listViews>
    <listViews>
        <fullName>Products</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Content__c.Product</value>
        </filters>
        <label>Products</label>
    </listViews>
    <listViews>
        <fullName>Recipe</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Content__c.Recipe</value>
        </filters>
        <label>Recipes</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contents</pluralLabel>
    <recordTypes>
        <fullName>AdvanceContent</fullName>
        <active>true</active>
        <description>Configure a new Advance Content.</description>
        <label>Advance Content</label>
    </recordTypes>
    <recordTypes>
        <fullName>Asset</fullName>
        <active>true</active>
        <label>Asset</label>
    </recordTypes>
    <recordTypes>
        <fullName>Banner</fullName>
        <active>true</active>
        <description>Configure a new Banner content. This content will scroll or appear-fade inside a Banner. The data this type of content allows are Media elements</description>
        <label>Banner</label>
    </recordTypes>
    <recordTypes>
        <fullName>BrandDetail</fullName>
        <active>true</active>
        <description>Configure a new Brand Detail content. This content will display a a brand detail including all it related brands. The data this type of content allows are Media elements</description>
        <label>Brand Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <description>Configure a new Event content. This content will be shown inside an Event. The data this type of content allows are Media elements and Event metadata such as event date, event capacity, etc.</description>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>FAQ</fullName>
        <active>true</active>
        <description>Configure a new FAQ content. This content will be shown inside a FAQ list. The data this type of content allows are Texts for questions and answers</description>
        <label>FAQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>News</fullName>
        <active>true</active>
        <description>Configure a new News content. This content will be shown inside a News. The data this type of content allows are Media elements and News metadata such as title, news description, etc.</description>
        <label>News</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product</fullName>
        <active>true</active>
        <label>Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Recipe</fullName>
        <active>true</active>
        <description>Configure a new Recipe content. This content will be shown inside a Recipe</description>
        <label>Recipe</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Clustering__c</fullName>
        <label>Clustering</label>
    </sharingReasons>
    <validationRules>
        <fullName>EventEndDate</fullName>
        <active>true</active>
        <description>When Event End Date is before than Event Start Date</description>
        <errorConditionFormula>EventEndDate__c &lt; EventStartDate__c</errorConditionFormula>
        <errorDisplayField>EventEndDate__c</errorDisplayField>
        <errorMessage>Can not be before than Event Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HTMLContentAndLongDescription</fullName>
        <active>false</active>
        <description>Validation on HTMLContent__c and LongDescription__c fields</description>
        <errorConditionFormula>AND(NOT(ISBLANK(HTMLContent__c)), LEN(Body__c) &lt;&gt; 0)</errorConditionFormula>
        <errorMessage>Can not fill both HTML Content and Long Description fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OverlayQuadrantObligatory</fullName>
        <active>true</active>
        <description>RecordType &quot;Banner&quot;; Cuando OverlayQuadrant__c este vació y los campos Title__c, Extract__c, ButtonLabel__c tienen valor u OverlayQuadrant__c tiene valor y todos los campos Title__c, Extract__c, ButtonLabel__c  estén todos vacíos.</description>
        <errorConditionFormula>AND(
    OR(
        AND(ISBLANK(TEXT(OverlayQuadrant__c)), OR(NOT(ISBLANK(Title__c)), NOT(LEN(Extract__c) = 0), NOT(ISBLANK(ButtonLabel__c))))  
    ,
        AND(NOT(ISBLANK(TEXT(OverlayQuadrant__c))), AND(ISBLANK(Title__c), LEN(Extract__c) = 0, ISBLANK(ButtonLabel__c)))  
    ),
                 RecordType.Name = &quot;Banner&quot;
)</errorConditionFormula>
        <errorDisplayField>OverlayQuadrant__c</errorDisplayField>
        <errorMessage>Si este campo esta vacío, los campos &quot;List Title&quot;, &quot;List Description&quot;, &quot;Button Label&quot; NO deben tener valor. 
Si este campo tiene valor, de los campos &quot;List Title&quot;, &quot;List Description&quot;, &quot;Button Label&quot; al menos uno NO debe estar vacío.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PublishEndDate</fullName>
        <active>true</active>
        <description>When Publish End Date is before than Publish Start Date</description>
        <errorConditionFormula>PublishEndDate__c &lt; PublishStartDate__c</errorConditionFormula>
        <errorDisplayField>PublishEndDate__c</errorDisplayField>
        <errorMessage>Can not be before than Publish Start Date</errorMessage>
    </validationRules>
</CustomObject>